<resources>
    <string name="app_name">Profitcoin</string>

    <string name="item_currency_title_7d">7d:</string>
    <string name="item_currency_tittle_24h">24h:</string>
    <string name="item_currency_name">TextView</string>
    <string name="item_currency_money">TextView</string>
    <string name="item_currency_devider">|</string>
    <string name="item_currency_symbol">TextView</string>
    <string name="item_currency_image_symbol_content">Image symbol cryptocurrency</string>

    <string name="text_menu_portfolio">Portfolio</string>
    <string name="text_menu_list_currency">Exchange</string>
    <string name="text_menu_setting">Setting</string>

    <string name="text_setting_image_symbol_content">Image symbol cryptocurrency</string>
    <string name="text_setting_about_program">About program</string>
    <string name="text_setting_login">Login</string>
    <string name="text_setting_singup">Sign up</string>
    <string name="text_setting_exit">Exit</string>
    <string name="text_setting_help">Help</string>
    <string name="text_setting_api_key">Add API KEY</string>

    <string name="refresh">Refresh</string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="commit">Commit</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>

    <string name="profile_save">Save</string>
    <string name="profile_saved">Saved</string>

    <string name="dialog_exit_description">Do you really want to quit?</string>
    <string name="dialog_exit_positive">Yes</string>
    <string name="dialog_exit_negative">Cancel</string>

    <string name="activity_Login_error_email">Enter email address!</string>
    <string name="activity_Login_error_password">Enter password!</string>

    <string name="activity_signup_create_user_with_email">createUserWithEmail:onComplete:"</string>
    <string name="activity_signup_authentication_failed">Authentication failed.</string>
    <string name="activity_signup_error_email">Enter email address!</string>
    <string name="activity_signup_error_password">Enter password!</string>
    <string name="activity_signup_error_password_less">Password too short, enter minimum 6 characters!</string>

    <string name="activity_reset_password_error_reset">Enter your registered email id</string>
    <string name="activity_reset_password_error_reset_send">We have sent you instructions to reset your password!</string>
    <string name="activity_reset_password_success">Failed to send reset email!</string>

    <string name="dialog_title_sort">Sort by:</string>
    <string name="dialog_sort_name">Name</string>
    <string name="dialog_sort_amount">Amount</string>
    <string name="dialog_sort_change_for_the_day">Change for the day</string>
    <string name="dialog_sort_change_for_the_seven_day">Change in 7 days</string>
    <string name="dialog_sort_button_decrease">Decreasing</string>

    <string name="dialog_title_add_api_key">Please add api key:</string>
    <string name="dialog_add_api_key_close">Close</string>
    <string name="dialog_add_api_key_accept">Add</string>
    <string name="dialog_add_api_key_hint">Add your api key for work network</string>

    <string name="text_help_description">What is it Altcoin? Altcoins are cryptocurrencies other than Bitcoin.
        The majority of altcoins are forks of Bitcoin with small uninteresting changes.
        This page categorises different ways altcoins have modified Bitcoin.</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="empty_no_data">There is no data, Click Retry</string>

    <string name="ic_info">Icon info</string>
    <string name="ic_dot">Icon dot</string>
    <string name="ic_search">Icon search</string>
    <string name="ic_warning">Icon warning</string>
    <string name="widget_header">Widget Header</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="tittle_coindatail">Tittle</string>
    <string name="price_dollar_coindetail">Price Dollar</string>
    <string name="price_dollar_content_coindeatail">Price Dollar Content</string>
    <string name="saved_your_cryptocurrency">Saved your cryptocurrency</string>
    <string name="sorting">Sorting</string>
</resources>
