<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/widget_text_symbol_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_symbol"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="BTC" />

    <TextView
        android:id="@+id/widget_text_devider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_devider"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_text_name_currency"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_name"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="Bitcoin" />

    <TextView
        android:id="@+id/widget_text_title_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_tittle_24h"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/widget_text_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        tools:text="-2.94%" />

    <TextView
        android:id="@+id/widget_text_title_7h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_title_7d"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/widget_text_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        tools:text="+10.19%" />
</LinearLayout>