<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/text_symbol_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_symbol"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BTC" />

    <TextView
        android:id="@+id/text_devider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_devider"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_symbol_currency"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name_currency"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_name"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_devider"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Bitcoin" />

    <TextView
        android:id="@+id/text_money_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_money"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="6000.67$" />

    <TextView
        android:id="@+id/text_title_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_tittle_24h"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_symbol_currency"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_title_7h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_currency_title_7d"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_days"
        app:layout_constraintTop_toBottomOf="@+id/text_money_currency"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_title_24h"
        app:layout_constraintTop_toBottomOf="@+id/text_name_currency"
        app:layout_constraintVertical_bias="1.0"
        tools:text="-2.94%" />

    <TextView
        android:id="@+id/text_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_money_currency"
        app:layout_constraintVertical_bias="1.0"
        tools:text="+10.19%" />
</android.support.constraint.ConstraintLayout>