<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/title"
        style="@style/TextView.WhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_margin"
        android:text="@string/dialog_title_sort"
        android:textSize="@dimen/header_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/linearLayoutSortName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_sort_name"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCloseDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSort"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>