<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/TextView.WhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/toolbarAction1"
                style="@style/TextView.WhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/toolbarAction2"
                style="@style/TextView.WhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/profile_save" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
</merge>